--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#header {
+  height: 60px;
+  background-color:#1d2130;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#footer {
+  height: 50px;
+  background-color:#1d2130;
+}
+
+#image {
+  height: 40px;
+  margin-left: 30px;
+  width: auto;
+  margin-top: 8px;
+
+}
+
+.display-show {
+  display: inline-block;
+  width: 23%;
+  width: calc(25% - ( ( 20px ) * 0.75 ) );
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+.display-show:nth-child(4n+4) {
+  margin-right: 0;
+}
+
+.display-show img {
+  width: 100%;
+  height: auto;
 }
