--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,14 @@
 }
 
 #footer {
-  height: 50px;
+  height: 60px;
   background-color:#1d2130;
+  margin-top: 750px;
 }
 
 #image {
   height: 40px;
-  margin-left: 30px;
+  margin-left: 90px;
   width: auto;
   margin-top: 8px;
 
